# goormedu_cloud

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: cd.yaml
data/: gyul.csv
